--- a/public/css/main.css
+++ b/public/css/main.css
@@ -120,7 +120,7 @@ a {
 }
 
   .edit-button {
-    background: hsl(0, 0%, 88%);
+    border: 1px solid hsl(0, 0%, 86%);
     color: hsl(0, 0%, 20%);
     display: inline-block;
     font-family: "ff-meta-web-pro", sans-serif;
@@ -130,7 +130,7 @@ a {
   }
 
     .edit-button:hover {
-      background: hsl(0, 0%, 84%);
+      border-color: hsl(0, 0%, 72%);
       color: hsl(0, 0%, 0%);
       text-decoration: underline;
     }
@@ -159,7 +159,7 @@ a {
   background: linear-gradient(hsl(0, 0%, 92%), hsl(0, 0%, 84%));
   box-shadow: 0 1px 0 hsl(0, 0%, 40%);
   border: 0;
-  border-radius: .3em;
+  border-radius: 10em;
   color: hsl(0, 0%, 30%);
   display: inline-block;
   font-family: "ff-meta-web-pro", sans-serif;
@@ -287,12 +287,12 @@ a {
 
   .word {
     font-size: 3em;
-    line-height: 3em;
+    line-height: 2.5em;
   }
 
   .edit-form-text {
     font-size: 3em;
-    height: 3em;
+    height: 2.5em;
   }
 
   .footer {
