--- a/public/css/main.css
+++ b/public/css/main.css
@@ -156,8 +156,8 @@ a {
   }
 
 .edit-form-submit {
-  background: linear-gradient(hsl(0, 0%, 92%), hsl(0, 0%, 84%));
-  box-shadow: 0 1px 0 hsl(0, 0%, 40%);
+  background: linear-gradient(hsl(0, 0%, 96%), hsl(0, 0%, 88%));
+  box-shadow: 0 2px 0 hsla(0, 0%, 0%, 0.3);
   border: 0;
   border-radius: 10em;
   color: hsl(0, 0%, 30%);
@@ -171,18 +171,19 @@ a {
 
   .edit-form-submit:hover,
   .edit-form-submit:focus {
-    background: linear-gradient(hsl(0, 0%, 88%), hsl(0, 0%, 80%));
+    background: linear-gradient(hsl(0, 0%, 92%), hsl(0, 0%, 84%));
   }
 
   .edit-form-submit--primary {
-    background: linear-gradient(hsl(120, 40%, 44%), hsl(120, 40%, 36%));
+    background: linear-gradient(hsl(120, 90%, 44%), hsl(120, 70%, 36%));
+    box-shadow: 0 2px 0 hsl(0, 0%, 0%);
     color: #fff;
     width: 160px;
   }
 
     .edit-form-submit--primary:hover,
     .edit-form-submit--primary:focus {
-      background: linear-gradient(hsl(120, 40%, 36%), hsl(120, 40%, 28%));
+      background: linear-gradient(hsl(120, 90%, 36%), hsl(120, 70%, 28%));
     }
 
 
