'one word wiki' -> 'edit this word'. remove some test fonts.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,7 +10,7 @@
 
 html {
     color: hsl(0, 0%, 20%);
-    font-family: "ff-more-web-pro", "ff-more-web-pro-wide", "kinesis-pro-3", serif;
+    font-family: "ff-more-web-pro", serif;
     font-size: 1em;
     line-height: 1.4;
 }
